Remove traces of Bach